configuracao de pastas pro front-end definida

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=lukisa
 APP_ENV=local
-APP_KEY=base64:Xfnx8iPMM4G3To879no6UNW5mGwFtykBFvsk9Ajg374=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
