--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
+UID=1000
+GID=1000
+USER=rhaniel
 
 APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=pt_BR
