ajustado com sucesso os modulos

--- a/src/modules/Authentication/composer.json
+++ b/src/modules/Authentication/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nwidart/auth",
+    "name": "nwidart/authentication",
     "description": "",
     "authors": [
         {
@@ -17,14 +17,14 @@
     },
     "autoload": {
         "psr-4": {
-            "Modules\\Auth\\": "app/",
-            "Modules\\Auth\\Database\\Factories\\": "database/factories/",
-            "Modules\\Auth\\Database\\Seeders\\": "database/seeders/"
+            "Modules\\Authentication\\": "app/",
+            "Modules\\Authentication\\Database\\Factories\\": "database/factories/",
+            "Modules\\Authentication\\Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Modules\\Auth\\Tests\\": "tests/"
+            "Modules\\Authentication\\Tests\\": "tests/"
         }
     }
 }
