--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_URL=http://localhost:8000
 UID=1000
 GID=1000
-USER=rhaniel
+USER=
 
 APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=pt_BR
