--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/html:z
       - .env:/var/www/html/.env
     depends_on:
       - php
@@ -42,7 +42,7 @@ services:
     ports:
       - "9000:9000"
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/html:z
       - .env:/var/www/html/.env
       - ./docker/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
     restart: always
@@ -63,7 +63,7 @@ services:
     user: "${UID}:${GID}"
     container_name: artisan_lukisa
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/html:z
       - .env:/var/www/html/.env
     working_dir: /var/www/html
     profiles: ["artisan"]
@@ -83,14 +83,10 @@ services:
     user: "${UID}:${GID}"
     container_name: composer_lukisa
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/html:z
       - .env:/var/www/html/.env
     working_dir: /var/www/html
-    # depends_on:
-    #   - php
-    # user: ${USER:-laravel}
     profiles: ["composer"]
-    # entrypoint: ['composer', '--ignore-platform-reqs', '--no-scripts']
     networks:
       - laravel
       - shared_network
@@ -102,7 +98,7 @@ services:
     container_name: node_lukisa
     user: "${UID}:${GID}"
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/html:z
       - .env:/var/www/html/.env
     ports:
       - 3000:3000
