--- a/src/composer.json
+++ b/src/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "nwidart/laravel-modules": "^12.0",
+        "spatie/laravel-data": "^4.15",
         "tightenco/ziggy": "^2.5"
     },
     "require-dev": {
@@ -28,6 +29,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Modules\\": "modules/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
