dockerfile e compose corrigido

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,40 +1,39 @@
-# Corrigido "as" para "AS" para seguir a convenção
-FROM php:8.2-fpm AS builder
+# --- Estágio de Build (AGORA EM ALPINE) ---
+FROM php:8.2-fpm-alpine AS builder
 
-# Argumentos que serão passados do docker-compose
-ARG UID
-ARG GID
-ARG USER
-
-# Instala dependências de sistema necessárias para compilar as extensões PHP
-RUN apt-get update && apt-get install -y \
-    libpq-dev \
-    libzip-dev \
-    libicu-dev \
-    libonig-dev \
-    libva-dev \
-    mesa-va-drivers \
-    ffmpeg \
+# Instala as dependências de compilação necessárias no Alpine
+# Usamos 'apk add'. Note os pacotes com sufixo '-dev'.
+# 'build-base' é como o 'build-essential' do Debian.
+RUN apk add --no-cache \
+    build-base \
+    autoconf \
+    automake \
+    libtool \
     wget \
-    && rm -rf /var/lib/apt/lists/*
+    postgresql-dev \
+    libzip-dev \
+    icu-dev \
+    oniguruma-dev \
+    libsodium-dev \
+    ffmpeg-dev \
+    libva-dev
 
-# Instala as extensões PHP
-RUN docker-php-ext-install pdo pdo_pgsql bcmath zip pcntl intl
+# Instala as extensões PHP, incluindo 'sodium' que estava faltando
+RUN docker-php-ext-install pdo pdo_pgsql bcmath zip pcntl intl sodium
 
-# Instala a extensão Redis via PECL (mais simples)
-RUN pecl install redis && docker-php-ext-enable redis
+# Instala a extensão Redis via PECL
+RUN pecl install redis \
+ && docker-php-ext-enable redis
 
-
-# --- Estágio Final ---
-# Usamos uma imagem base limpa. A versão -alpine é muito menor.
+# --- Estágio Final (Continua Alpine) ---
 FROM php:8.2-fpm-alpine
 
-# Copia as extensões PHP compiladas do estágio de 'builder'
+# Copia o Composer da imagem oficial
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+
+# Copia as extensões e suas configurações do nosso builder Alpine (agora compatível)
 COPY --from=builder /usr/local/lib/php/extensions/ /usr/local/lib/php/extensions/
 COPY --from=builder /usr/local/etc/php/conf.d/ /usr/local/etc/php/conf.d/
-
-# Habilita explicitamente no estágio final as extensões que copiamos.
-RUN docker-php-ext-enable pdo pdo_pgsql bcmath zip pcntl intl redis
 
 # Argumentos e variáveis de ambiente
 ARG UID
@@ -44,13 +43,13 @@ ENV UID=${UID}
 ENV GID=${GID}
 ENV USER=${USER}
 
-# Instala apenas as dependências de sistema necessárias para a EXECUÇÃO
-# ---- LINHA CORRIGIDA ----
+# Instala APENAS as dependências de RUNTIME (sem '-dev')
 RUN apk add --no-cache \
     libzip \
     icu-libs \
     postgresql-libs \
     oniguruma \
+    libsodium \
     ffmpeg \
     libva \
     libva-utils
@@ -62,14 +61,10 @@ RUN addgroup -g ${GID} -S ${USER} && adduser -u ${UID} -G ${USER} -S -s /bin/sh 
 RUN sed -i "s/user = www-data/user = ${USER}/g" /usr/local/etc/php-fpm.d/www.conf \
     && sed -i "s/group = www-data/group = ${USER}/g" /usr/local/etc/php-fpm.d/www.conf
 
-# Define o diretório de trabalho
 WORKDIR /var/www/html
 
-# O volume será montado aqui de qualquer forma.
 USER ${USER}
 
-# Expõe a porta do PHP-FPM
 EXPOSE 9000
 
-# Comando para iniciar o PHP-FPM
 CMD ["php-fpm"]
