redis adicionado ao projeto

--- a/docker/php/custom.ini
+++ b/docker/php/custom.ini
@@ -4,3 +4,26 @@ upload_max_filesize = 30G
 memory_limit = 4G
 max_input_time = 300
 max_execution_time = 300
+
+[opcache]
+; Habilita o OPcache
+opcache.enable=1
+; Habilita o OPcache para a linha de comando (CLI), útil para o Artisan
+opcache.enable_cli=1
+
+; Define a quantidade de memória (em MB) para o OPcache.
+; Para um projeto médio, 128MB é um bom começo.
+opcache.memory_consumption=128
+
+; Define a quantidade de memória para strings internas (melhora o uso de memória).
+opcache.interned_strings_buffer=8
+
+; Número máximo de scripts que o OPcache pode armazenar.
+opcache.max_accelerated_files=10000
+
+; Com que frequência (em segundos) o OPcache deve verificar se os arquivos mudaram.
+; Para desenvolvimento, 2 segundos é bom. Para produção, você pode aumentar para 60 ou desabilitar (0).
+opcache.revalidate_freq=2
+
+; Permite que o OPcache armazene comentários do DocBlock, necessário para anotações/atributos.
+opcache.save_comments=1
