--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
   php:
     <<: *php-common # Herda a configuração comum
     container_name: php_lukisa
+    depends_on:
+      - redis
     ports:
       - "9000:9000"
     volumes: # Adiciona volumes específicos
@@ -75,9 +77,7 @@ services:
     restart: "no"
 
   node:
-    build:
-      context: ./docker/node
-      dockerfile: Dockerfile
+    image: node:lts-alpine
     container_name: node_lukisa
     user: "${UID}:${GID}"
     volumes:
@@ -92,3 +92,22 @@ services:
     networks:
       - laravel
       - shared_network
+
+  redis:
+    image: redis:7.2-alpine
+    container_name: redis_lukisa
+    restart: unless-stopped
+    ports:
+      - "6378:6379"
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    sysctls:
+      - net.core.somaxconn=1024
+    volumes:
+      - redis_data:/data
+    networks:
+      - laravel
+      - shared_network
+
+volumes:
+  redis_data:
+    driver: local
