login quase completo

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -8,6 +8,7 @@
         "isolatedModules": true,
         "target": "ESNext",
         "esModuleInterop": true,
+        "typeRoots": ["resources/js/types", "node_modules/@types"],
         "forceConsistentCasingInFileNames": true,
         "skipLibCheck": true,
         "noEmit": true,
