--- a/src/package.json
+++ b/src/package.json
@@ -20,5 +20,8 @@
         "tailwindcss": "^3.4.17",
         "typescript": "^5.8.2",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "react-toastify": "^11.0.5"
     }
 }
