--- a/src/package.json
+++ b/src/package.json
@@ -17,11 +17,21 @@
         "laravel-vite-plugin": "^1.2.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "shadcn-ui": "^0.9.5",
         "tailwindcss": "^3.4.17",
         "typescript": "^5.8.2",
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "react-toastify": "^11.0.5"
+        "@radix-ui/react-checkbox": "^1.3.2",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.523.0",
+        "react-toastify": "^11.0.5",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
