--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,7 @@
     },
     "devDependencies": {
         "@inertiajs/react": "^2.0.5",
-        "@tailwindcss/vite": "^4.0.17",
+        "@tailwindcss/vite": "^4.1.10",
         "@types/node": "^18.13.0",
         "@types/react": "^18.3.20",
         "@types/react-dom": "^18.3.5",
@@ -17,8 +17,8 @@
         "laravel-vite-plugin": "^1.2.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "shadcn-ui": "^0.9.5",
-        "tailwindcss": "^3.4.17",
+        "tailwindcss": "^4.1.10",
+        "tw-animate-css": "^1.3.4",
         "typescript": "^5.8.2",
         "vite": "^6.0.11"
     },
