--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -17,5 +17,5 @@
             "ziggy-js": ["./vendor/tightenco/ziggy"]
         }
     },
-    "include": ["resources/js/**/*.ts", "resources/js/**/*.tsx", "resources/js/**/*.d.ts",  "vite-env.d.ts", "global.d.ts",]
+    "include": ["resources/js","resources/js/**/*.ts", "resources/js/**/*.tsx", "resources/js/**/*.d.ts",  "vite-env.d.ts", "global.d.ts",]
 }
