--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-separator": "^1.1.7",
@@ -30,6 +31,7 @@
         "@radix-ui/react-switch": "^1.2.5",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.19.1",
         "lucide-react": "^0.523.0",
         "react-toastify": "^11.0.5",
         "tailwind-merge": "^3.3.1",
