--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=lukisa
+APP_NAME=Lukisa
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Xfnx8iPMM4G3To879no6UNW5mGwFtykBFvsk9Ajg374=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 UID=1000
@@ -24,30 +24,30 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
+# DB_HOST=
+# DB_PORT=
+# DB_DATABASE=
+# DB_USERNAME=
 # DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+FILESYSTEM_DISK=s3
+QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=redis
+REDIS_PASSWORD=123
 REDIS_PORT=6379
 
 MAIL_MAILER=log
@@ -64,5 +64,6 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+AWS_ENDPOINT=http://172.18.0.3:9000
 
 VITE_APP_NAME="${APP_NAME}"
