--- a/src/composer.json
+++ b/src/composer.json
@@ -16,6 +16,7 @@
         "league/flysystem-aws-s3-v3": "^3.29",
         "nwidart/laravel-modules": "^12.0",
         "spatie/laravel-data": "^4.15",
+        "spatie/laravel-medialibrary": "^11.13",
         "tightenco/ziggy": "^2.5"
     },
     "require-dev": {
