--- a/src/package.json
+++ b/src/package.json
@@ -1,40 +1,45 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "tsc && vite build",
-        "dev": "vite --host"
-    },
-    "devDependencies": {
-        "@inertiajs/react": "^2.0.5",
-        "@tailwindcss/vite": "^4.1.10",
-        "@types/node": "^18.13.0",
-        "@types/react": "^18.3.20",
-        "@types/react-dom": "^18.3.5",
-        "@vitejs/plugin-react": "^4.3.4",
-        "axios": "^1.8.2",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "tailwindcss": "^4.1.10",
-        "tw-animate-css": "^1.3.4",
-        "typescript": "^5.8.2",
-        "vite": "^6.0.11"
-    },
-    "dependencies": {
-        "@radix-ui/react-avatar": "^1.1.10",
-        "@radix-ui/react-checkbox": "^1.3.2",
-        "@radix-ui/react-label": "^2.1.7",
-        "@radix-ui/react-separator": "^1.1.7",
-        "@radix-ui/react-slot": "^1.2.3",
-        "@radix-ui/react-switch": "^1.2.5",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "framer-motion": "^12.19.1",
-        "lucide-react": "^0.523.0",
-        "react-toastify": "^11.0.5",
-        "tailwind-merge": "^3.3.1",
-        "tailwindcss-animate": "^1.0.7"
-    }
+  "name": "lukisa",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "tsc && vite build",
+    "dev": "vite --host"
+  },
+  "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.19.1",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.523.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
+    "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@inertiajs/react": "^2.0.5",
+    "@tailwindcss/vite": "^4.1.10",
+    "@types/leaflet": "^1.9.19",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.8.2",
+    "concurrently": "^9.0.1",
+    "laravel-vite-plugin": "^1.2.0",
+    "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
+    "typescript": "^5.8.2",
+    "vite": "^6.0.11"
+  }
 }
