fazendo o metodo de salvar

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,5 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 AWS_ENDPOINT=http://172.18.0.3:9000
 
 VITE_APP_NAME="${APP_NAME}"
+VITE_MAPBOX_TOKEN=""
+VITE_HERE_API_KEY=""
