--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.19.1",
     "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.2.0",
     "lucide-react": "^0.523.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,6 +32,7 @@
     "@inertiajs/react": "^2.0.5",
     "@tailwindcss/vite": "^4.1.10",
     "@types/leaflet": "^1.9.19",
+    "@types/leaflet-geosearch": "^2.7.1",
     "@types/node": "^18.13.0",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
