--- a/src/package.json
+++ b/src/package.json
@@ -40,7 +40,9 @@
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.8.2",
     "concurrently": "^9.0.1",
+    "laravel-echo": "^2.1.6",
     "laravel-vite-plugin": "^1.2.0",
+    "pusher-js": "^8.4.0",
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.2",
