--- a/.env.example
+++ b/.env.example
@@ -67,5 +67,17 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 AWS_ENDPOINT=http://172.18.0.3:9000
 
 VITE_APP_NAME="${APP_NAME}"
-VITE_MAPBOX_TOKEN=""
-VITE_HERE_API_KEY=""
+VITE_MAPBOX_TOKEN=
+VITE_HERE_API_KEY=
+
+REVERB_APP_ID=
+REVERB_APP_KEY=
+REVERB_APP_SECRET=
+REVERB_HOST=reverb
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="localhost"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
