ajustes nos components

--- a/src/components.json
+++ b/src/components.json
@@ -11,10 +11,10 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib",
+    "components": "@/Components",
+    "utils": "@/Lib/Utils",
+    "ui": "@/Components/ui",
+    "lib": "@/Lib",
     "hooks": "@/hooks"
   },
   "iconLibrary": "lucide"
