att do .env example

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 APP_NAME=Lukisa
 APP_ENV=local
-APP_KEY=base64:Xfnx8iPMM4G3To879no6UNW5mGwFtykBFvsk9Ajg374=
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
-UID=1000
-GID=1000
+APP_URL=
+UID=
+GID=
 USER=
 
 APP_LOCALE=pt_BR
@@ -36,7 +36,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=s3
 QUEUE_CONNECTION=redis
 
@@ -63,8 +63,10 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
-AWS_ENDPOINT=http://172.18.0.3:9000
+AWS_USE_PATH_STYLE_ENDPOINT=true
+AWS_ENDPOINT=
+
+VITE_HMR_HOST=
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_MAPBOX_TOKEN=
@@ -73,11 +75,11 @@ VITE_HERE_API_KEY=
 REVERB_APP_ID=
 REVERB_APP_KEY=
 REVERB_APP_SECRET=
-REVERB_HOST=reverb
+REVERB_HOST=
 REVERB_PORT=8080
 REVERB_SCHEME=http
 
 VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
-VITE_REVERB_HOST="localhost"
+VITE_REVERB_HOST="${REVERB_HOST}"
 VITE_REVERB_PORT="${REVERB_PORT}"
 VITE_REVERB_SCHEME="${REVERB_SCHEME}"
