--- a/src/composer.json
+++ b/src/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.29",
         "nwidart/laravel-modules": "^12.0",
+        "opcodesio/log-viewer": "^3.19",
         "spatie/laravel-data": "^4.15",
         "spatie/laravel-medialibrary": "^11.13",
         "tightenco/ziggy": "^2.5"
