atualizacao de nginx conf e melhorias no front

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,57 +1,66 @@
 server {
     listen 8000;
-    index index.php index.html;
-    
     server_name _;
     root /var/www/html/public;
+    index index.php index.html;
 
+    # --- CONFIGURAÇÕES DE CLIENTE ---
+    client_max_body_size 30G;
+    client_header_buffer_size 16k;
+    large_client_header_buffers 4 16k;
+
+    # --- LOGS ---
     error_log  stderr warn;
     access_log /dev/stdout main;
 
-    # Caching para arquivos estáticos
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
-        expires 30d;  # Tempo de expiração do cache
-        add_header Cache-Control "public, no-transform";  # Cabeçalho de controle de cache
-    }
-
-    # Rota principal
+    # --- REGRAS DE ROTEAMENTO ---
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Manipulação de arquivos PHP
+    # --- PROCESSAMENTO PHP-FPM ---
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;  # Endereço do serviço PHP
+        fastcgi_pass php:9000; # Nome do serviço PHP no Docker
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+
+        # Otimizações de buffer para evitar erros 502 com respostas grandes do PHP
+        fastcgi_buffer_size 16k;
+        fastcgi_buffers 4 16k;
     }
 
+    # --- REGRAS PARA WEBSOCKETS (REVERB) ---
     location /reverb/ {
         proxy_pass http://reverb:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_read_timeout 86400; # Evita que a conexão caia
+    }
+    
+    # --- CACHE PARA ARQUIVOS ESTÁTICOS ---
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 
-    # Limite de tamanho do corpo da requisição
-    client_max_body_size 30G;
-    
-    # --- HABILITAR COMPRESSÃO GZIP ---
+    # --- COMPRESSÃO GZIP ---
     gzip on;
     gzip_vary on;
     gzip_proxied any;
     gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml+rss text/javascript image/svg+xml;
 
-    # Configurações de segurança adicionais
-    location ~ /\.ht {
-        deny all;  # Bloquear acesso a arquivos .htaccess
+    # --- SEGURANÇA ---
+    # Bloquear acesso a arquivos ocultos como .htaccess, .env
+    location ~ /\. {
+        deny all;
     }
 }
