fix: adicionado serviço scedule junto ao nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - reverb
       - redis
       - horizon
+      - scheduler
     networks:
       - laravel
       - shared_network
