--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -34,7 +34,7 @@ server {
     }
 
     # --- REGRAS PARA WEBSOCKETS (REVERB) ---
-    location /reverb/ {
+    location /app/ {
         proxy_pass http://reverb:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
