--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 APP_NAME=Lukisa
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Xfnx8iPMM4G3To879no6UNW5mGwFtykBFvsk9Ajg374=
 APP_DEBUG=true
-APP_URL=
-UID=
-GID=
+APP_DOMAIN=
+APP_URL=http://${APP_DOMAIN}:8585
+UID=1000
+GID=1000
 USER=
 
 APP_LOCALE=pt_BR
@@ -23,12 +24,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=
-# DB_PORT=
-# DB_DATABASE=
-# DB_USERNAME=
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=pgsql
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
@@ -47,7 +48,7 @@ MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
 REDIS_HOST=redis
-REDIS_PASSWORD=123
+REDIS_PASSWORD=
 REDIS_PORT=6379
 
 MAIL_MAILER=log
@@ -63,10 +64,9 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=true
-AWS_ENDPOINT=
-
-VITE_HMR_HOST=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+AWS_ENDPOINT=http://${APP_DOMAIN}:9000
+AWS_URL=http://${APP_DOMAIN}:9000/${AWS_BUCKET}/
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_MAPBOX_TOKEN=
@@ -75,14 +75,14 @@ VITE_HERE_API_KEY=
 REVERB_APP_ID=
 REVERB_APP_KEY=
 REVERB_APP_SECRET=
-REVERB_HOST=
+REVERB_HOST=${APP_DOMAIN}
 REVERB_PORT=8080
 REVERB_SCHEME=http
 
 VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
-VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_HOST=${APP_DOMAIN}
 VITE_REVERB_PORT="${REVERB_PORT}"
 VITE_REVERB_SCHEME="${REVERB_SCHEME}"
 
-OLLAMA_URL=
+OLLAMA_URL=http://ollama_service:11434
 MEDIA_PREFIX=media
