--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.523.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.5.3",
     "react-leaflet": "^5.0.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1"
