--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,7 @@
     "react-easy-crop": "^5.5.3",
     "react-leaflet": "^5.0.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.13"
