--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,54 +1,44 @@
-# --- Estágio de Build (AGORA EM ALPINE) ---
+# --- Estágio de Build ---
 FROM php:8.2-fpm-alpine AS builder
 
-# Instala as dependências de compilação necessárias no Alpine
-# Usamos 'apk add'. Note os pacotes com sufixo '-dev'.
-# 'build-base' é como o 'build-essential' do Debian.
+# Instala apenas dependências essenciais para imagens e PHP core
 RUN apk add --no-cache \
     build-base \
     autoconf \
     automake \
     libtool \
-    wget \
     postgresql-dev \
     libzip-dev \
     icu-dev \
     oniguruma-dev \
     libsodium-dev \
-    ffmpeg-dev \
-    libva-dev \
     gd-dev \
     freetype-dev \
     libpng-dev \
     libwebp-dev \
     libjpeg-turbo-dev
 
-
-# Instala as extensões PHP, incluindo 'sodium' que estava faltando
+# Instala extensões PHP
 RUN docker-php-ext-install pdo pdo_pgsql bcmath zip pcntl intl sodium exif
 
-# Configura e instala a extensão GD com suporte a jpeg, webp, e freetype (para fontes)
+# Configura GD para imagens (JPG, WEBP, PNG)
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp \
     && docker-php-ext-install -j$(nproc) gd
 
-# garante que o ini de exif exista e seja carregado no CLI
 RUN docker-php-ext-enable exif
 
-# Instala a extensão Redis via PECL
-RUN pecl install redis \
- && docker-php-ext-enable redis
+# Redis
+RUN pecl install redis && docker-php-ext-enable redis
 
-# --- Estágio Final (Continua Alpine) ---
+# --- Estágio Final ---
 FROM php:8.2-fpm-alpine
 
-# Copia o Composer da imagem oficial
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-# Copia as extensões e suas configurações do nosso builder Alpine (agora compatível)
+# Copia extensões compiladas
 COPY --from=builder /usr/local/lib/php/extensions/ /usr/local/lib/php/extensions/
 COPY --from=builder /usr/local/etc/php/conf.d/ /usr/local/etc/php/conf.d/
 
-# Argumentos e variáveis de ambiente
 ARG UID
 ARG GID
 ARG USER
@@ -56,32 +46,25 @@ ENV UID=${UID}
 ENV GID=${GID}
 ENV USER=${USER}
 
-# Instala APENAS as dependências de RUNTIME (sem '-dev')
+# Instala dependências de runtime
 RUN apk add --no-cache \
     libzip \
     icu-libs \
     postgresql-libs \
     oniguruma \
     libsodium \
-    ffmpeg \
-    libva \
     freetype \
     libpng \
     libwebp \
     gd \
     libjpeg-turbo
 
-# Adiciona usuário e grupo para rodar a aplicação sem ser root
 RUN addgroup -g ${GID} -S ${USER} && adduser -u ${UID} -G ${USER} -S -s /bin/sh ${USER}
 
-# Configura o PHP-FPM para usar o novo usuário
 RUN sed -i "s/user = www-data/user = ${USER}/g" /usr/local/etc/php-fpm.d/www.conf \
     && sed -i "s/group = www-data/group = ${USER}/g" /usr/local/etc/php-fpm.d/www.conf
 
 WORKDIR /var/www/html
-
 USER ${USER}
-
 EXPOSE 9000
-
 CMD ["php-fpm"]
