--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -5,7 +5,7 @@ server {
     index index.php index.html;
 
     # --- CONFIGURAÇÕES DE CLIENTE ---
-    client_max_body_size 30G;
+    client_max_body_size 200M;
     client_header_buffer_size 16k;
     large_client_header_buffers 4 16k;
 
